syntax = "proto3";
package kratos.api;

option go_package = "nancalacc/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  App app = 3;
  Service service = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}


message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 max_open_conns = 3;
    int32 max_idle_conns = 4;
    string tag = 5;
  }
  message DatabaseSync {
    string driver = 1;
    string source = 2;
    int32 max_open_conns = 3;
    int32 max_idle_conns = 4;
    string tag = 5;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration read_timeout = 5;
    google.protobuf.Duration write_timeout = 6;
  }
  message Etcd {
    repeated string endpoints = 1;
    string dial_timeout = 2;
    string config_prefix = 3;
    bool enable_config_watch = 4;
  }
  message Auth {
    string app_id = 1;
    string app_secret = 2;
  } 
  Database database = 1;
  DatabaseSync database_sync = 2;
  Redis redis = 3;
  Etcd etcd = 4;
  Auth auth = 5;
}
message App {
  string id = 1;
  string name = 2;
  string version = 3;
  string env = 4;
  string log_level =5;
  string log_out = 6;
}

message Service {
  message Business {
    string third_company_id = 1;
    string platform_ids = 2;
    string company_id = 3;
    string ecisaccountsync_url = 4;
    string ecisaccountsync_url_increment = 5;
  }
  message Auth {
    message Self {
      string app_package = 1;
      string app_secret = 2;
      string access_key = 3;
      string secret_key = 4;
    }
    message App {
      string client_id = 1;
      string client_secret = 2;
      string auth_url = 3;
      string auth_path = 4;
      string grant_type = 5;
    }

    message Third {
      string client_id = 1;
      string client_secret = 2;
      string auth_url = 3;
      string auth_path = 4;
      string grant_type = 5;
      string company_id = 6;
    }

    message User {
      string client_id = 1;
      string client_secret = 2;
      string auth_url = 3;
      string auth_path = 4;
      string grant_type = 5;
      string redirect_uri = 6;
    }

    message Dingtalk {
      string endpoint = 1;
      string app_key = 2;
      string app_secret = 3;
      string timeout = 4;
      int64 maxConcurrent = 5;
    }
    Self self = 1;
    App app = 2;
    Third third = 3;
    User user = 4;
    Dingtalk dingtalk=5;
  }
  Business business = 1;
  Auth auth = 2;
}